# Qyvaria

./: .gitignore  ACKNOWLEDGEMENTS.md  BRANCH_GUIDE.md  CHANGELOG.md  CHECKSUMS.sha256  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  NOTICE  QYVARIA_ALL_IN_ONE_GITHUB_PUBLIC.md  Qyvaria includes qyvaria.py + all GitHub repo files:zip  Qyvaria_Apache_2_0_Public_Source.7z  README.md  READ_ME_FIRST_UPLOAD_THIS_FOLDER.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES_DRAFT.md  TRADEMARKS.md  UPLOAD_TO_GITHUB.md  pyproject.toml  requirements.txt
