[project]
name = "qyvaria"
version = "1.0.63.6"
description = "Qyvaria OS and Qyvaria AI Software public repository with qyvaria.py single-file AI bundle."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jan Havlasek" }
]
keywords = [
  "qyvaria",
  "ai-software",
  "ai-kernel",
  "prompt-engineering",
  "agent-simulation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/Havlasek1John/Qyvaria"
Repository = "https://github.com/Havlasek1John/Qyvaria"
Issues = "https://github.com/Havlasek1John/Qyvaria/issues"

[tool.qyvaria]
kernel = "qyvaria.py"
